--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -336,8 +336,8 @@ topologies:
             eos:
               - 4.26.1F
           2021.2.0:
-            resources
-              schema: 1
+            schema: 1
+            resources:
               cpu: 32
               ram: 64
             branch: v2021.2-20211026a
