--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1402,6 +1402,7 @@ topologies:
               disk: 300
               image: dual-topo-training-level-1-3-cvp
             branch: nested/2023.2
+            image: dual-topo-training-level-1-3-eos
             orderable: true
             eos:
               - 4.30.0F 
