--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1443,7 +1443,7 @@ topologies:
             orderable: true
             image: level-1-3-cisco-labs-2022-3
             eos:
-              - 4.27.2F
+              - 4.30.0F
     prod:
       ceos:
         cpu: 60
@@ -1458,10 +1458,128 @@ topologies:
             orderable: true
             image: level-1-3-container-labs-2022-3
             eos:
-              - 4.27.2F
+              - 4.30.0F
     desc: 'Training Level 1-3 cisco labs'
     name: 'Training Level 1-3 cisco labs'
     title: 'Training Level 1-3 cisco labs'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
+
+  training-level-1-cl:
+    dev:
+      ceos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: level-1-cl-2023-2
+            eos:
+              - 4.30.0F
+    prod:
+      ceos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: v2022.3-20230922a
+            orderable: true
+            image: level-1-cl-2023-2
+            eos:
+              - 4.30.0F
+    desc: 'Training Level 1'
+    name: 'Training Level 1'
+    title: 'Training Level 1'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
+
+  training-level-2-cl:
+    dev:
+      ceos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: level-2-cl-2023-2
+            eos:
+              - 4.30.0F
+    prod:
+      ceos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: v2022.3-20230922a
+            orderable: true
+            image: level-2-cl-2023-2
+            eos:
+              - 4.30.0F
+    desc: 'Training Level 2'
+    name: 'Training Level 2'
+    title: 'Training Level 2'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
+
+
+  training-level-3-cl:
+    dev:
+      ceos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: level-3-cl-2023-2
+            eos:
+              - 4.30.0F
+    prod:
+      ceos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: v2022.3-20230922a
+            orderable: true
+            image: level-3-cl-2023-2
+            eos:
+              - 4.30.0F
+    desc: 'Training Level 3'
+    name: 'Training Level 3'
+    title: 'Training Level 3'
     disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
