--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1498,9 +1498,9 @@ topologies:
             image: level-1-cl-2023-2
             eos:
               - 4.30.0F
-    desc: 'Training Level 1'
-    name: 'Training Level 1'
-    title: 'Training Level 1'
+    desc: 'Training Level - 1'
+    name: 'Training Level - 1'
+    title: 'Training Level - 1'
     disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
@@ -1537,9 +1537,9 @@ topologies:
             image: level-2-cl-2023-2
             eos:
               - 4.30.0F
-    desc: 'Training Level 2'
-    name: 'Training Level 2'
-    title: 'Training Level 2'
+    desc: 'Training Level - 2'
+    name: 'Training Level - 2'
+    title: 'Training Level - 2'
     disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
@@ -1577,9 +1577,9 @@ topologies:
             image: level-3-cl-2023-2
             eos:
               - 4.30.0F
-    desc: 'Training Level 3'
-    name: 'Training Level 3'
-    title: 'Training Level 3'
+    desc: 'Training Level -3'
+    name: 'Training Level - 3'
+    title: 'Training Level - 3'
     disk_size: 300
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
