--- a/topologies/training-level2-cl/files/menus/training-l2.yaml
+++ b/topologies/training-level2-cl/files/menus/training-l2.yaml
@@ -5,11 +5,21 @@
       STP-Start:
         description: "Start the STP Lab"
       STP-Troubleshooting:
-        description: "Start the STP troubleshooting lab"
+        description: "Load the MLAG troubleshooting configs"
       MLAG-Start:
         description: "Start the MLAG Lab"
       MLAG-Troubleshooting:
-        description: "Start the MLAG Troubleshooting lab"
+        description: "Load the MLAG troubleshooting configs"
+      Routing-Start:
+        description: "Start the routing lab"
+      OSPF-Start:
+        description: "Start the OSPF lab"
+      NSSA-Start:
+        description: "Start the NSSA lab"
+      ACL-Start:
+        description: "Start the ACL lab"
+      ACL-Troubleshoot:
+        description: "Load the ACL troubleshooting configs"
     labconfiglets:
       reset:
         spine1:
@@ -174,3 +184,178 @@
           - "borderleaf1-base"
         borderleaf2:
           - "borderleaf2-base"
+      Routing-Start:
+        spine1:
+          - "spine1-base"
+        spine2:
+          - "spine2-base"
+        spine3:
+          - "spine3-base"
+        spine4:
+          - "spine4-base"
+        leaf1:
+          - "leaf1-base"
+        leaf2:
+          - "leaf2-base"
+        leaf3:
+          - "leaf3-base"
+        leaf4:
+          - "leaf4-base"
+        host1:
+          - "host1-base"
+        host2:
+          - "host2-base"
+        host3:
+          - "host3-base"
+        host4:
+          - "host4-base"
+        borderleaf1:
+          - "borderleaf1-base"
+        borderleaf2:
+          - "borderleaf2-base"
+      OSPF-Start:
+        spine1:
+          - "spine1-base"
+        spine2:
+          - "spine2-base"
+        spine3:
+          - "spine3-base"
+        spine4:
+          - "spine4-base"
+        leaf1:
+          - "leaf1-base"
+        leaf2:
+          - "leaf2-base"
+        leaf3:
+          - "leaf3-base"
+        leaf4:
+          - "leaf4-base"
+        host1:
+          - "host1-base"
+        host2:
+          - "host2-base"
+        host3:
+          - "host3-base"
+        host4:
+          - "host4-base"
+        borderleaf1:
+          - "borderleaf1-base"
+        borderleaf2:
+          - "borderleaf2-base"
+      NSSA-Start:
+        spine1:
+          - "spine1-base"
+          - "NSSA-Start-Spine1"
+        spine2:
+          - "spine2-base"
+          - "NSSA-Start-Spine2"
+        spine3:
+          - "spine3-base"
+          - "NSSA-Start-Spine3"
+        spine4:
+          - "spine4-base"
+          - "NSSA-Start-Spine4"
+        leaf1:
+          - "leaf1-base"
+          - "NSSA-Start-Leaf1"
+        leaf2:
+          - "leaf2-base"
+          - "NSSA-Start-Leaf2"
+        leaf3:
+          - "leaf3-base"
+          - "NSSA-Start-Leaf3"
+        leaf4:
+          - "leaf4-base"
+          - "NSSA-Start-Leaf4"
+        host1:
+          - "host1-base"
+        host2:
+          - "host2-base"
+        host3:
+          - "host3-base"
+        host4:
+          - "host4-base"
+        borderleaf1:
+          - "borderleaf1-base"
+          - "NSSA-Start-BorderLeaf1"
+        borderleaf2:
+          - "borderleaf2-base"
+          - "NSSA-Start-BorderLeaf2"
+      ACL-Start:
+        spine1:
+          - "spine1-base"
+          - "ACL-Start-Spine1"
+        spine2:
+          - "spine2-base"
+          - "ACL-Start-Spine2"
+        spine3:
+          - "spine3-base"
+          - "ACL-Start-Spine3"
+        spine4:
+          - "spine4-base"
+          - "ACL-Start-Spine4"
+        leaf1:
+          - "leaf1-base"
+          - "ACL-Start-Leaf1"
+        leaf2:
+          - "leaf2-base"
+          - "ACL-Start-Leaf2"
+        leaf3:
+          - "leaf3-base"
+          - "ACL-Start-Leaf3"
+        leaf4:
+          - "leaf4-base"
+          - "ACL-Start-Leaf4"
+        host1:
+          - "host1-base"
+        host2:
+          - "host2-base"
+        host3:
+          - "host3-base"
+        host4:
+          - "host4-base"
+        borderleaf1:
+          - "borderleaf1-base"
+          - "ACL-Start-BorderLeaf1"
+        borderleaf2:
+          - "borderleaf2-base"
+          - "ACL-Start-BorderLeaf2"
+      ACL-Troubleshoot:
+        spine1:
+          - "spine1-base"
+          - "TroubleACL-Start-Spine1"
+        spine2:
+          - "spine2-base"
+          - "TroubleACL-Start-Spine2"
+        spine3:
+          - "spine3-base"
+          - "TroubleACL-Start-Spine3"
+        spine4:
+          - "spine4-base"
+          - "TroubleACL-Start-Spine4"
+        leaf1:
+          - "leaf1-base"
+          - "TroubleACL-Start-Leaf1"
+        leaf2:
+          - "leaf2-base"
+          - "TroubleACL-Start-Leaf2"
+        leaf3:
+          - "leaf3-base"
+          - "TroubleACL-Start-Leaf3"
+        leaf4:
+          - "leaf4-base"
+          - "TroubleACL-Start-Leaf4"
+        host1:
+          - "host1-base"
+        host2:
+          - "host2-base"
+        host3:
+          - "host3-base"
+        host4:
+          - "host4-base"
+        borderleaf1:
+          - "borderleaf1-base"
+          - "TroubleACL-Start-BorderLeaf1"
+        borderleaf2:
+          - "borderleaf2-base"
+          - "TroubleACL-Start-BorderLeaf2"
