--- a/topologies/training-level2-cl/files/menus/training-l2.yaml
+++ b/topologies/training-level2-cl/files/menus/training-l2.yaml
@@ -15,7 +15,7 @@
       OSPF-Start:
         description: "Routing OSPF Lab"
       NSSA-Start:
-        description: "Routing MultiArea OSPF"
+        description: "Routing MultiArea OSPF Lab"
       ACL-Start:
         description: "ACL Lab"
       ACL-Troubleshoot:
